--- a/pom.xml
+++ b/pom.xml
@@ -9,36 +9,90 @@
     <version>1.0-SNAPSHOT</version>
 
 <dependencies>
-    <!-- https://mvnrepository.com/artifact/com.artofsolving/jodconverter -->
     <dependency>
         <groupId>com.artofsolving</groupId>
         <artifactId>jodconverter</artifactId>
-        <version>2.2.1</version>
+        <version>2.2.2</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/src/main/resources/libs/jodconverter-2.2.2.jar</systemPath>
+    </dependency>
+    <dependency>
+        <groupId>com.artofsolving</groupId>
+        <artifactId>jodconverter-cli</artifactId>
+        <version>2.2.2</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/src/main/resources/libs/jodconverter-cli-2.2.2.jar</systemPath>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.6.0</version>
+        <version>1.5.6</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/slf4j-api-1.5.6.jar</systemPath>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14 -->
     <dependency>
-        <groupId> org.apache.cassandra</groupId>
-        <artifactId>cassandra-all</artifactId>
-        <version>0.8.1</version>
-
-        <exclusions>
-            <exclusion>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-            </exclusion>
-        </exclusions>
-
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-jdk14</artifactId>
+        <version>1.5.6</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/slf4j-jdk14-1.5.6.jar</systemPath>
     </dependency>
+    <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>1.2</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/commons-cli-1.2.jar</systemPath>
+    </dependency>
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>1.4</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/commons-io-1.4.jar</systemPath>
+    </dependency>
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>1.4</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/commons-io-1.4.jar</systemPath>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.openoffice/juh -->
+    <dependency>
+        <groupId>org.openoffice</groupId>
+        <artifactId>juh</artifactId>
+        <version>3.0.1</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/juh-3.0.1.jar</systemPath>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.openoffice/jurt -->
+    <dependency>
+        <groupId>org.openoffice</groupId>
+        <artifactId>jurt</artifactId>
+        <version>3.0.1</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/jurt-3.0.1.jar</systemPath>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.openoffice/ridl -->
+    <dependency>
+        <groupId>org.openoffice</groupId>
+        <artifactId>ridl</artifactId>
+        <version>3.0.1</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/ridl-3.0.1.jar</systemPath>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.openoffice/unoil -->
+    <dependency>
+        <groupId>org.openoffice</groupId>
+        <artifactId>unoil</artifactId>
+        <version>3.0.1</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/unoil-3.0.1.jar</systemPath>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+    <dependency>
+        <groupId>com.thoughtworks.xstream</groupId>
+        <artifactId>xstream</artifactId>
+        <version>1.3.1</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/xstream-1.3.1.jar</systemPath>
+    </dependency>
+
+
+
 
 </dependencies>
 </project>
