--- a/pom.xml
+++ b/pom.xml
@@ -9,20 +9,28 @@
     <version>1.0-SNAPSHOT</version>
 
 <dependencies>
-    <dependency>
+<!--    <dependency>
         <groupId>com.artofsolving</groupId>
         <artifactId>jodconverter</artifactId>
         <version>2.2.2</version>
         <scope>system</scope>
         <systemPath>${project.basedir}/src/main/resources/libs/jodconverter-2.2.2.jar</systemPath>
-    </dependency>
+    </dependency>-->
+    <!-- https://mvnrepository.com/artifact/org.artofsolving.jodconverter/jodconverter-core -->
     <dependency>
+        <groupId>org.artofsolving.jodconverter</groupId>
+        <artifactId>jodconverter-core</artifactId>
+        <version>3.0-beta-4</version>
+        <systemPath>${project.basedir}/src/main/resources/libs/jodconverter-core-3.0-beta-4-jahia5.jar</systemPath>
+    </dependency>
+
+<!--    <dependency>
         <groupId>com.artofsolving</groupId>
         <artifactId>jodconverter-cli</artifactId>
         <version>2.2.2</version>
         <scope>system</scope>
         <systemPath>${project.basedir}/src/main/resources/libs/jodconverter-cli-2.2.2.jar</systemPath>
-    </dependency>
+    </dependency>-->
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
     <dependency>
         <groupId>org.slf4j</groupId>
@@ -49,12 +57,12 @@
         <version>1.4</version>
         <systemPath>${project.basedir}/src/main/resources/libs/commons-io-1.4.jar</systemPath>
     </dependency>
-    <dependency>
+<!--    <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>1.4</version>
         <systemPath>${project.basedir}/src/main/resources/libs/commons-io-1.4.jar</systemPath>
-    </dependency>
+    </dependency>-->
     <!-- https://mvnrepository.com/artifact/org.openoffice/juh -->
     <dependency>
         <groupId>org.openoffice</groupId>
